--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Awesome TPI (Travail Pratique Individuel)</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Description">
+  <meta name="description" content="Awesome TPI — Regroupe des ressources utiles aux apprentis, chefs de projet et experts pour les travails pratiques individuels (TPI) de fin d'apprentissage des informaticiens CFC.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
   <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
@@ -21,7 +21,7 @@
       loadNavbar: true,
       coverpage: true,
       onlyCover: true,
-       relativePath: true,
+      relativePath: true,
       /*loadSidebar: true,
       subMaxLevel: 3*/
       plugins: [
