[feature] mail templates
* Add mail templates for "chef de projet" and "lancement TPI"
* Add `--no-fund` to `npm install` in `Makefile`

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
   <script src="//cdn.jsdelivr.net/npm/docsify-edit-on-github"></script>
   <style>
-    h1 { padding-top: 1.5em; }
+    h1 { padding-top: 1.6em; }
+    h2 { padding-top: 1.3em; }
+    .markdown-section h1 { margin: 0 0 1rem -2rem; }
+    .markdown-section h2 { margin: 0 0 1rem -1rem; }
   </style>
 </head>
 <body>
